--- a/frontend/web/style.css
+++ b/frontend/web/style.css
@@ -2,6 +2,8 @@
 @import "./styles/fonts.css";
 @import "./styles/margins.css";
 @import "./styles/sizes.css";
+@import "./styles/form.css";
+@import "./styles/positions.css";
 
 * {
     margin: 0;
@@ -12,6 +14,7 @@
 html, body {
     margin: 0;
     padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 a {
