--- a/frontend/web/styles/fonts.css
+++ b/frontend/web/styles/fonts.css
@@ -2,6 +2,30 @@
     font-size: 10pt;
 }
 
+.f-14 {
+    font-size: 14pt;
+}
+
+.f-18 {
+    font-size: 18pt;
+}
+
+.f-30 {
+    font-size: 30pt;
+}
+
+.f-50 {
+    font-size: 50pt;
+}
+
+.f-65 {
+    font-size: 65pt;
+}
+
 .f-arial {
     font-family: Arial, sans-serif;
+}
+
+.f-medium {
+    font-weight: bolder;
 }
